--- a/amplitude_tracking/0004_inspect_rings.ipynb
+++ b/amplitude_tracking/0004_inspect_rings.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,9 +83,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 105000 into shape (11,25,10,10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m/home/HPC/camontan/lhc_paper_indicators/amplitude_tracking/config/appendix.json\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m      5\u001b[0m     appendix \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39mload(f)\n\u001b[0;32m----> 7\u001b[0m amplitude_x0 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49masarray(appendix[\u001b[39m\"\u001b[39;49m\u001b[39mamplitude_x\u001b[39;49m\u001b[39m\"\u001b[39;49m])\u001b[39m.\u001b[39;49mreshape(my_shape)\n\u001b[1;32m      8\u001b[0m amplitude_y0 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39masarray(appendix[\u001b[39m\"\u001b[39m\u001b[39mamplitude_y\u001b[39m\u001b[39m\"\u001b[39m])\u001b[39m.\u001b[39mreshape(my_shape)\n",
+      "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 105000 into shape (11,25,10,10)"
+     ]
+    }
+   ],
    "source": [
     "with open(\"/home/HPC/camontan/lhc_paper_indicators/amplitude_tracking/config/particles.json\", \"r\") as f:\n",
     "    initial_conditions = json.load(f)\n",
